examples/test/conf/base/GatewayClass.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: public-gateway
spec:
  controllerName: edgion.io/gateway-controller
  description: "Edgion-based HTTP/TCP gateway"
  parametersRef:
    group: edgion.io
    kind: EdgionGatewayConfig
    name: example-gateway
